--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                                 </div>
                                 <ul class="links">
                                     <li><a href="#">INÍCIO</a></li>
-                                    <li><a href="/info.html">INFORMAÇÕES</a></li>
+                                    <li><a href="info.html">INFORMAÇÕES</a></li>
                                     <li><a href="#">SERVIÇOS</a></li>
-                                    <li><a href="/Site/contato.html">CONTATOS</a></li>
+                                    <li><a href="contato.html">CONTATOS</a></li>
                                     <li><a href="#">MAPA DO SITE</a></li>
                                     <li><a href="#">DOCUMENTAÇÃO</a></li>
                                 </ul>
